# JoePhys

./:   '  CMakeLists.txt  LICENSE  README.md  \  imgui.ini  sudocode  test to see if github is working.txt
.cache/clangd/index/: _fixes.hpp.B9C863C9FC02B84D.idx  _vectorize.hpp.C50126C228772364.idx  common.h.D8B0B0038461082E.idx  common.hpp.2735D12EB5DB17EF.idx  constants.hpp.1063284DD0FBB4EE.idx  constants.inl.BB5952EB28FD910F.idx  context.c.75A32434C9374227.idx  egl_context.c.7987DF60F693DB57.idx  exponential.h.720792E2536193DB.idx  exponential.hpp.1C551F78E00F6CC3.idx  func_common.hpp.6D0F79F9E2FF47CC.idx  func_common.inl.49A38B89C11AE4AB.idx  func_common_simd.inl.C294B2D8FEFB50C7.idx  func_exponential.hpp.B802A6C7C0DEE68A.idx  func_exponential.inl.F61CEDF6B0FF7729.idx  func_exponential_simd.inl.C686833D1AB41623.idx  func_geometric.hpp.8C7EC408AD788C4C.idx  func_geometric.inl.7E062FC34EF40326.idx  func_geometric_simd.inl.A8C6DF907B1BD046.idx  func_integer.hpp.D4A2429D2F9E1455.idx  func_integer.inl.AB376E080F282B64.idx  func_integer_simd.inl.78AED75CB1C53F49.idx  func_matrix.hpp.98B134F139909C0D.idx  func_matrix.inl.3D8BE36D33A950A4.idx  func_matrix_simd.inl.98120FE74CABC4E8.idx  func_packing.hpp.835E4F98516E516A.idx  func_packing.inl.A5E9B4A2D4826267.idx  func_packing_simd.inl.549DE0549ABB329D.idx  func_trigonometric.hpp.FBB9509E3469C70D.idx  func_trigonometric.inl.9CF15F90C146F3CA.idx  func_trigonometric_simd.inl.F27D05A45D3E3FCF.idx  func_vector_relational.hpp.B961026DBDF185CE.idx  func_vector_relational.inl.A970753009EB8E75.idx  func_vector_relational_simd.inl.FFA5CA773767710E.idx  fwd.hpp.793DAB64B72BC402.idx  geometric.h.79F95870B0BD5B59.idx  geometric.hpp.43EDBCE6E47290CC.idx  glad.c.F3A1DF99EB1282CE.idx  glad.h.8ED83445E9FF40D5.idx  glfw3.h.F26F4419F4ED851A.idx  (+110 more)
JoePhys/: CMakeLists.txt
JoePhys/dependencies/: CMakeLists.txt
JoePhys/dependencies/glad/src/: glad.c
JoePhys/dependencies/imgui/: CMakeLists.txt
JoePhys/include/: World.hpp
JoePhys/src/: Particle.cpp  Spring.cpp  World.cpp
dependencies/imgui/: CMakeLists.txt
include/JoePhys/: Circle.hpp  Cluster.hpp  Mat2.hpp  Particle.hpp  PhysObj.hpp  PhysObject.hpp  Shape.hpp  Spring.hpp  Vec2.hpp  World.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glm/: CMakeLists.txt
lib/include/Core/: Core.hpp
lib/src/Core/: Core.cpp
lib/stb/: CMakeLists.txt
res/shaders/: circle_shader.frag  circle_shader.vert  default_shader.frag  default_shader.vert  line_shader.frag  line_shader.vert  square_shader.frag  square_shader.vert  ui_shader.frag  ui_shader.vert
res/textures/: texture_atlas.xcf
src/: Hello.cpp  Particle.cpp  Spring.cpp  World.cpp  clock.cpp  clock.hpp  main.cpp  main.hpp  particle.cpp  particle.hpp  particle_manager.cpp  particle_manager.hpp  particle_spawner.cpp  particle_spawner.hpp  particles.cpp  particles.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  sprite.hpp  ui.cpp  ui.hpp
src/App/: App.cpp
testbed/: AllSceneHeaders.hpp  CMakeLists.txt  Colour.cpp  Colour.hpp  Colours.cpp  Colours.hpp  GUI.hpp  GUIManager.cpp  GUIManager.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.cpp  Scenes.hpp  Settings.cpp  Settings.hpp  WindowManager.cpp  WindowManager.hpp
testbed/.cache/clangd/index/: AllSceneHeaders.hpp.3320B955F3918BC6.idx  ClothScene.hpp.EE80F56E14BF4101.idx  Colour.cpp.5767138AF0164B2A.idx  Colour.hpp.EB399E47AABBFB28.idx  ColourDebugScene.hpp.CBBD2A892FB97E4C.idx  FloppyQuadsScene.hpp.7AF3537E3C00B730.idx  GUIManager.cpp.BA08C19ABD8C8362.idx  GUIManager.hpp.2CA2E7286F52ED10.idx  Main.cpp.33F6B4E48DC166FA.idx  NewtonsCradleScene.hpp.28B154AC03F14CE4.idx  PinballScene.hpp.F4915786E8E1D619.idx  Renderer.cpp.2C1EC3E958468032.idx  Renderer.hpp.AF6F26644DE6C16B.idx  RopeScene.hpp.0CE1E04CDF3E38E8.idx  SceneManager.cpp.231217AD587E6243.idx  SceneManager.hpp.5859480170A10AE2.idx  Scenes.cpp.AA0CFC8C90ACFBC3.idx  Scenes.hpp.ED6DFA51826F97D4.idx  Settings.cpp.050BAD0800D86442.idx  Settings.hpp.ADC51C258240B02E.idx  WindowManager.cpp.6E2383464E9A1E13.idx  WindowManager.hpp.9FB9D8183E6A006D.idx  context.c.78A3A6F092BFB102.idx  egl_context.c.D293E8FF152A2673.idx  glad.c.DECEA3F9A58E27F5.idx  glad.h.0AF089DB020E0DE0.idx  glfw3.h.C35BC05533634895.idx  glfw3native.h.E8059D92F54C5D44.idx  glx_context.c.E0293CE61B868E58.idx  imconfig.h.36FFBC40885A3886.idx  imgui.cpp.703377F76EF038DD.idx  imgui.h.816E47F822B0ADEC.idx  imgui_demo.cpp.0557FAC684568D21.idx  imgui_draw.cpp.D9A6581D1FC4B156.idx  imgui_impl_glfw.cpp.CD35C8B6203780C6.idx  imgui_impl_glfw.h.A2E9F1AD5087E362.idx  imgui_impl_opengl3.cpp.D1B4B3446A653496.idx  imgui_impl_opengl3.h.975D7D4E9C49E59D.idx  imgui_impl_opengl3_loader.h.6A1288E1E4A310DF.idx  imgui_internal.h.8956F5FD5E30E284.idx  (+43 more)
testbed/dependencies/: CMakeLists.txt
testbed/dependencies/JoePhys/: CMakeLists.txt
testbed/dependencies/JoePhys/include/JoePhys/: JoePhys.hpp  Spring.hpp  Vec2.hpp  World.hpp
testbed/dependencies/JoePhys/src/: Spring.cpp
testbed/include/: AllSceneHeaders.hpp  Colour.hpp  GUIManager.hpp  Renderer.hpp  Settings.hpp
testbed/include/scenes/: AirResistanceScene.hpp  ClothScene.hpp  ColourDebugScene.hpp  FloppyQuadsScene.hpp  HourGlassScene.hpp  NewtonsCradleScene.hpp  PinballScene.hpp  RopeScene.hpp  WeightsScene.hpp  WreckingBallScene.hpp
testbed/scenes/: ClothScene.hpp  CollisionScene.hpp  CollisionTest.hpp  ColourDebugScene.hpp  ColourTestScene.hpp  NewtonsCradleScene.hpp  PendulumClockScene.hpp  PinballScene.hpp  RopeScene.hpp  SquishyRectangleScene.hpp  SquishySquareScene.hpp  TestScene.hpp  TestScene_two.hpp  Test_Scene.hpp  Test_Scene_Two.hpp  test_scene.hpp  test_scene_two.hpp
testbed/src/: Colour.cpp  GUIManager.cpp  Main.cpp  SceneManager.cpp  Scenes.cpp  Settings.cpp  WindowManager.cpp
